// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapse function should collapse a tree such as specified in RFC002 example 1`] = `
•TBlock(tag=a,anchor[https://domain.com])
 ├─•TPhrasing(anonymous)
 │ ├─•TText(anonymous,data["This is "])
 │ └─•TText(tag=span,data["phrasing content"])
 ├─•TBlock(tag=img)
 └─•TPhrasing(anonymous)
   ├─•TText(anonymous,data["and this is "])
   ├─•TText(tag=strong,data["too"])
   └─•TText(anonymous,data["."])

`;

exports[`collapse function should handle deeply nested HTML 1`] = `
•TBlock(tag=article)
 ├─•TPhrasing(anonymous)
 │ └─•TText(anonymous,data["First implicit paragraph"…])
 └─•TBlock(tag=div)
   ├─•TPhrasing(anonymous)
   │ └─•TText(anonymous,data["Second implicit paragrap"…])
   └─•TBlock(tag=p)
     ├─•TPhrasing(anonymous)
     │ ├─•TText(anonymous,data["A new paragraph."])
     │ └─•TText(tag=span,data[" And a span within"])
     └─•TBlock(tag=img)

`;

exports[`collapse function should handle direct style inheritance 1`] = `
•TBlock(tag=div)
 └─•TPhrasing(anonymous)
   └─•TText(tag=span,data["This is nice!"])

`;

exports[`collapse function should handle indirect style inheritance 1`] = `
•TBlock(tag=div)
 └─•TBlock(tag=div)
   └─•TPhrasing(anonymous)
     └─•TText(anonymous,data["This is great!"])

`;

exports[`collapse function should handle nested anchors 1`] = `
•TPhrasing(tag=a,anchor[https://domain.com])
 ├─•TText(anonymous,data["This is "])
 ├─•TText(tag=span,data["phrasing content"])
 ├─•TText(anonymous,data[" "])
 └─•TPhrasing(tag=a,anchor[https://sub.domain.com])
   ├─•TText(anonymous,data["and this is "])
   └─•TText(tag=strong,data["too"])

`;

exports[`collapse function should hoist blocks recursively 1`] = `
•TBlock(tag=span)
 ├─•TPhrasing(anonymous)
 │ └─•TText(anonymous,data["Line1"])
 └─•TBlock(tag=strong)
   ├─•TPhrasing(anonymous)
   │ ├─•TText(anonymous,data["Line2"])
   │ └─•TText(tag=span,data[" Line3"])
   └─•TBlock(tag=img)

`;
